# dream-destination-picker

./: README.md  pyproject.toml
data/: saved_trip.json
src/dream_destination_picker/: controller.py  data.py  main.py
src/dream_destination_picker/assets/images/: photo-1612347741252-9d7f5cd6cf3d.avif
src/dream_destination_picker/data/: saved_trip.json
src/dream_destination_picker/pages/: home_page.py  result_page.py  saved_page.py
