[project]
name = "dream-destination-picker"
version = "0.1.0"
description = ""
authors = [
    {name = "chita521",email = "akhilachitluri2009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet[all] (>=0.85.2,<0.86.0)"
]

[tool.poetry]
packages = [{include = "dream_destination_picker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
